<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>control_interface</name>
  <version>0.0.5</version>
  <description>ROS2 interface to send commands to PX4 through MavSDK</description>
  <maintainer email="petr.stibinger@fly4future.com">stibipet</maintainer>
  
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mavsdk</depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>builtin_interfaces</depend>

  <depend>nav_msgs</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>px4_msgs</depend>
  <depend>fog_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
